2004-12-22 Hasso Tepper <hasso at quagga.net>

	* vtysh_config.c: No delimiter between "ip forwarding" and "ipv6
	  forwarding".

2004-12-09 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* vtysh.c: (vtysh_connect) No reason to call geteuid and getegid,
	  the results were never used.

2004-12-07 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* vtysh.c: Make several functions static instead of global.
	  Added several commands to support destination-specific logging levels.
	  (vtysh_completion) This function is unused, so comment it out.

2004-11-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* vtysh.c: (vtysh_client_execute) Fix flaws in detecting trailing
	  '\0' chars and command return code.

2004-10-28 Hasso Tepper <hasso at quagga.net>

	* vtysh.c: "show running-daemons" broke users habits who are using
	  "sho run" to view running configuration. Changed it to "show
	  daemons". 

2004-10-20 Hasso Tepper <hasso at quagga.net>

	* vtysh.c: Don't popen pager if command is "exit". Fixes "vtysh screws
	  up my terminal if I exit" issue.

2004-10-13 Hasso Tepper <hasso at quagga.net>

	* extract.pl.in: All daemons can use both IPv6 and IPv4 access lists
	  to limit access to vty.

2004-10-11 Paul Jakma <paul@dishone.st>

	* vtysh.c: (vtysh_client_execute) fix the sync fix. The 4th and
	  final sync byte is not ASCII NULL, it's actually a status integer,
	  and only ASCII NULL if CMD_SUCCESS is returned by daemon.
	  Fix pointed out by Hasso.
 
2004-10-11 Hasso Tepper <hasso at quagga.net>

	* vtysh.c, vtysh_user.c: Make more strings const.
	
2004-10-07 Hasso Tepper <hasso at quagga.net>

	* vtysh.c, vtysh.h, vtysh_config.c, vtysh_main.c: Fix compiler
	  warnings: make strings const, signed -> unsigned, remove unused
	  variables.
	* vtysh_config.c: Fix crash introduced with previous patch.

2004-10-03 Hasso Tepper <hasso at quagga.net>

	* vtsyh_main.c: Enter into enable node by default. Disable node doesn't